<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaand.thirdlab.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--</LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/enterUserName"
                    android:textAlignment="center"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:padding="5dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/size"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/little"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/little"
                    android:textAlignment="center"
                    android:onClick="kek"/>

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/middle"
                    android:textAlignment="center"
                    android:onClick="kek"/>

                <RadioButton
                    android:id="@+id/big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/big"
                    android:textAlignment="center"
                    android:onClick="kek"/>

            </RadioGroup>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filler"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/hamCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/ham"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:onClick="kek"/>

                <CheckBox
                    android:id="@+id/cheeseCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/cheese"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.363"
                    app:layout_constraintStart_toEndOf="@+id/hamCB"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:onClick="kek"/>

                <CheckBox
                    android:id="@+id/mushroomCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/mushrooms"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hamCB"
                    android:onClick="kek"/>

                <CheckBox
                    android:id="@+id/pineappleCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/ananas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mushroomCB"
                    app:layout_constraintTop_toBottomOf="@+id/cheeseCB"
                    android:onClick="kek"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/card_number"
                    android:inputType="numberDecimal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/spinner3" />

                <EditText
                    android:id="@+id/dateCardEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date_card"
                    android:inputType="date"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

                <EditText
                    android:id="@+id/cardCVV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cvv_cvc2"
                    android:inputType="numberDecimal"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/dateCardEnd"
                    app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <Switch
                    android:id="@+id/email_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick='switch_email_onClick'
                    android:text="@string/email_switch"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/email_switch" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txtResult"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="button_order_onClick"
                    android:text="@string/button"
                    app:layout_constraintTop_toBottomOf="@id/txtResult" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
